* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Dec 2018 Released 2.3.1 version
* Update translations from zanata (cs, de, es, fr, ja, pl, pt_BR, uk, zh_CN updated)
* Avoid some PyGTKDeprecationWarnings
* Don’t show Unicode 12.0 draft emoji by default in emoji-picker
* Update emoji data to Unicode 12.0 draft
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 05 Dec 2018 Released 2.3.0 version
* Update translations from zanata (de, ja, uk updated)
* Commit the current preëdit when the focus changes
* When preëdit empty or lookup table not enabled by key: clear the lookup table
* Make key bindings configurable (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/15)
* Correct tooltips for the “up” and “down” buttons for input methods dictionaries

* Author: Mike FABIAN <mfabian@redhat.com>
* 28 Nov 2018 Released 2.2.1 version
* Update translations from zanata (pl, uk updated)

* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Nov 2018 Released 2.2.0 version
* Update translations from zanata (de updated)
* Save some screen space in the setup tool
* Add inline completion feature
* Tab should force a lookup when the minimum number of characters is not yet reached

* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Oct 2018 Released 2.1.3 version
* Update translations from zanata (uk updated)

* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Sep 2018 Released 2.1.2 version
* Update translations from zanata (de, pl updated)
* Add typing-booster.its and typing-booster.loc to avoid making the release descriptions and developer name in typing-booster.appdata.xml translatable.
* Remove code to check whether another instance of the setup tool is running.
* Add new option to avoid adding a space when committing by label or mouse (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/39)
* Update emoji annotations from CLDR
* Do not try to commit if index is >= the current number of candidates (Resolves: rhbz#1630349)